validate-pod-probes/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-pod-probes
  annotations:
    pod-policies.kyverno.io/autogen-controllers: DaemonSet,Deployment,StatefulSet
    policies.kyverno.io/title: Require Pod Probes
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Readiness probes need to be configured to correctly manage a Pod's
      lifecycle during deployments, restarts, and upgrades.
      A `readinessProbe` is used by Services and Deployments to determine if the Pod is ready to receive network traffic.
      This policy validates that all containers have readiness probes by
      ensuring the `periodSeconds` field is greater than zero.
spec:
  validationFailureAction: enforce
  background: true
  failurePolicy: Ignore
  rules:
    - name: validate-readinessProbe
      exclude:
        resources:
          namespaces:
            - "*-system"
            - "*-system-*"
            - "external-secrets"
      match:
        any:
          - resources:
              kinds:
                - Pod
              operations:
                - CREATE
                - UPDATE
      validate:
        message: >-
          Readiness probes is required
          Policy Link: 
        pattern:
          spec:
            containers:
              - readinessProbe:
                  periodSeconds: ">0"
